# ETIC

./: .swp
Backend-1/discord_bot/: .gitignore  env.py  main.py  pyproject.toml
Projeto-1/: Dockerfile  README.md  db.sqlite3  pyproject.toml
Projeto-1/DriveClone/: settings.py  urls.py
Projeto-1/accounts/: admin.py  forms.py  handler.py  models.py  sender.py  urls.py  views.py
Projeto-1/accounts/migrations/: 0001_initial.py  0002_alter_profile_photo.py  0002_profile_allowed_storage_profile_used_storage.py
Projeto-1/accounts/templates/: login.html  profile.html
Projeto-1/accounts/templates/registration/: logged_out.html  login.html  password_change_form.html  password_changed_done.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  register.html  registration_done.html
Projeto-1/mainapp/: admin.py  decorators.py  forms.py  models.py  serializers.py  urls.py  views.py  views_api.py
Projeto-1/mainapp/migrations/: 0001_initial.py  0002_alter_file_folder.py  0002_file_filename.py  0003_alter_file_folder.py  0004_folder_folder.py  0005_alter_folder_folder_folder_unique_folder_name.py
Projeto-1/mainapp/templates/: create_new_folder.html  home.html  openFolder.html  storage_bar.html  upload_file.html
Projeto-1/media/files/admin/compras/: db.sqlite3  db_wXC4NpT.sqlite3  upload_file.html  views.py  views_fR4O4sv.py
Projeto-1/static/css/: create-folder.css  home.css  login.css  open-folder.css  profile.css  register.css
Projeto-1/templates/: base.html
(+358 files in other folders)
