[tool.poetry]
name = "projeto-1"
version = "0.1.0"
description = "The final project for ETIC first year"
authors = ["CodeZobac"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
pillow = "^10.3.0"
easy-thumbnails = "^2.8.5"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
